# win-etw-manifest-rs

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  test.xml
.github/workflows/: rust.yml
src/: event.rs  keyword.rs  lib.rs  provider.rs  task.rs  template.rs
src/parser/: event.rs  keyword.rs  mod.rs  provider.rs  task.rs  template.rs
